@@ -3,11 +3,11 @@ README
 setup.cfg
 setup.py
 weewx.conf
-bin/config_database.py
-bin/config_fousb.py
-bin/config_vp.py
+bin/wee-config-database.py
+bin/wee-config-fousb.py
+bin/wee-config-vantage.py
 bin/daemon.py
-bin/runreports.py
+bin/wee-reports.py
 bin/weewxd.py
 bin/examples/__init__.py
 bin/examples/alarm.py
