@@ -536,14 +536,14 @@ Version: 2.2
       are expected to be found there. </p>
 
     <h2 id="Configuring_your_Davis_console">Configuring the Davis Vantage console</h2>
-    <p>Weewx comes with a configuration utlity, <span class="code">config_vp.py</span>, 
+    <p>Weewx comes with a configuration utlity, <span class="code">wee-config-vantage.py</span>, 
       that can set many of the on-board EEPROM constants in the Davis Vantage stations, 
       such as its archive interval, altitude, rain bucket type, <em>etc.</em> </p>
     <p>Run it with the configuration file as an argument and <span class="code">
 	--help</span> as an option to see its usage: </p>
-    <p class="tty"><em>$WEEWX_ROOT</em>/bin/config_vp.py <em>$WEEWX_ROOT</em>/weewx.conf --help </p>
+    <p class="tty"><em>$WEEWX_ROOT</em>/bin/wee-config-vantage.py <em>$WEEWX_ROOT</em>/weewx.conf --help </p>
     <p>This will print out something like:</p>
-    <p class="tty">Usage: config_vp.py: config_path [--help] [--info] [--clear]
+    <p class="tty">Usage: wee-config-vantage.py: config_path [--help] [--info] [--clear]
      [--set-interval=SECONDS] [--set-altitude=FEET] [--set-barometer=inHg]
      [--set-bucket=CODE] [--set-rain-year-start=MM] [--set-time]
      [--start | -- stop]
@@ -575,7 +575,7 @@ Options:
 Mutating actions will request confirmation before proceeding.</p>
     <p>It is useful to run it with the <span class="code">--info</span> option to 
       see what the current EEPROM settings are on your station: </p>
-    <p class="tty"><em>$WEEWX_ROOT</em>/bin/config_vp.py <em>$WEEWX_ROOT</em>/weewx.conf --info </p>
+    <p class="tty"><em>$WEEWX_ROOT</em>/bin/wee-config-vantage.py <em>$WEEWX_ROOT</em>/weewx.conf --info </p>
     <p>This will print out something like: </p>
     <p class="tty">VantagePro EEPROM settings:
       
@@ -629,7 +629,7 @@ Offset:                       -1.000</p>
       dates after about 2006.</p>
     <p><span class="highlight">Highlighted</span> values can be changed.</p>
     <p>For example, to change the archive interval to 10 minutes (600 seconds):</p>
-    <p class="tty"><em>$WEEWX_ROOT</em>/bin/config_vp.py <em>$WEEWX_ROOT</em>/weewx.conf --set-interval=600</p>
+    <p class="tty"><em>$WEEWX_ROOT</em>/bin/wee-config-vantage.py <em>$WEEWX_ROOT</em>/weewx.conf --set-interval=600</p>
     <p>Other parameters can be set in a similar manner.</p>
     <h3 id="Archive_interval">Archive interval</h3>
     <p>Valid archive intervals are 60, 300, 600, 900, 1800, 3600, and 7200. However, 
@@ -647,7 +647,7 @@ Offset:                       -1.000</p>
     <p>Normally, this is set by Davis, but if you have replaced your bucket with 
       a different kind, you might want to reconfigure. For example, to change to a 
       0.1MM bucket (bucket code &quot;2&quot;), use the following:</p>
-    <p class="tty"><em>$WEEWX_ROOT</em>/bin/config_vp.py <em>$WEEWX_ROOT</em>/weewx.conf --set-bucket=2</p>
+    <p class="tty"><em>$WEEWX_ROOT</em>/bin/wee-config-vantage.py <em>$WEEWX_ROOT</em>/weewx.conf --set-bucket=2</p>
     <h3>Dumping the logger memory</h3>
 	  <p>Generally, <span class="code">weewx</span> downloads only new archive 
 	  records from the on board logger in the Vantage. However, occasionally the 
@@ -658,7 +658,7 @@ Offset:                       -1.000</p>
 	  lose any data which might have accumulated in the logger memory, but not 
 	  yet downloaded. By using the <span class="code">--dump</span> command 
 	  before clearing you might be able to save these data. </p>
-    <p class="tty"><em>$WEEWX_ROOT</em>/bin/config_vp.py <em>$WEEWX_ROOT</em>/weewx.conf --dump</p>
+    <p class="tty"><em>$WEEWX_ROOT</em>/bin/wee-config-vantage.py <em>$WEEWX_ROOT</em>/weewx.conf --dump</p>
 	  <p>This will dump all data archived in the Vantage memory directly to the 
 	  database, without regard to whether or not they have been seen before. 
 	  Because the command dumps <em>all</em> data, it may result in many 
@@ -1596,11 +1596,11 @@ port = /dev/cuaU0</p>
 	This will cause the console software to internally reboot. In one case this 
 	has fixed the problem without data loss.</li>
       <li>If all else fails, clear the memory of the console using the utility
-	<span class="code">config_vp.py</span>. This may cause loss of data, but 
+	<span class="code">wee-config-vantage.py</span>. This may cause loss of data, but 
 	usually works. Adjust paths as necessary:</li>
     </ol>
     <p class="tty">cd /home/weewx
-./bin/config_vp.py weewx.conf --clear </p>
+./bin/wee-config-vantage.py weewx.conf --clear </p>
 	  <p>See also the section <em><a href="#Dumping_the_logger_memory">Dumping 
 	  the logger memory</a></em>.</p>
     <h3>3rd party Vantage connectors</h3>
