@@ -407,11 +407,11 @@ setup(name='weewx',
                      'weeutil',
                      'weewx'],
       py_modules  = ['daemon'],
-      scripts     = ['bin/config_database.py',
-                     'bin/config_fousb.py',
-                     'bin/config_vp.py',
+      scripts     = ['bin/wee-config-database.py',
+                     'bin/wee-config-fousb.py',
+                     'bin/wee-config-vantage.py',
                      'bin/weewxd.py',
-                     'bin/runreports.py'],
+                     'bin/wee-reports.py'],
       data_files  = [('',
                       ['LICENSE.txt',
                        'README',
